triv: fix visibility of remove handler in inlines

--- a/src/django_smartbase_admin/static/sb_admin/src/css/_inlines.css
+++ b/src/django_smartbase_admin/static/sb_admin/src/css/_inlines.css
@@ -195,3 +195,8 @@ fieldset.module > header {
     }
 }
 
+.djn-remove-handler {
+    position: relative;
+    z-index: 1;
+}
+
